# gpu-ray-tracer

./: .gitignore  CMakeLists.txt  Makefile  config.json  proposal.aux  proposal.fdb_latexmk  proposal.fls  proposal.tex  ray_tracer  report.ncu-rep  report.tex  world1.json  world16.json  world2.json  world4.json  world8.json  world8_stress.json
include/: assets.h  canvas.h  config.h.in  cube_world.h  entity.h  geometry.h  gpu_alloc.h  linear.h  raytracer.h  scene.h  scene_builder.h
include/gputils/: alloc.h  flat_vec.h
include/procedural/: cube_world.h  perlin.h
include/rayenv/: camera.h  canvas.h  color.h  environment.h  scene.cuh  scene.h  transformation.h
include/rayenv/cpu/: scene.h
include/rayenv/gpu/: scene.cuh  scene.h
include/raymath/: geometry.h  linear.h
include/rayopt/: bounding_box.h  bvh.h  z_order.h
include/rayopt/cpu/: bvh.h
include/rayopt/gpu/: bvh.h
include/rayprimitives/: entity.h  hitable.cuh  isect.h  light.cuh  material.cuh  material.h  primitive.h  texture.cuh  texture.h  texture_coords.h  trimesh.cuh  trimesh.h  vertex_buffer.h
src/: CMakeLists.txt  assets.cc  canvas.cu  cube_world.cc  gpu_alloc.cu  main.cc  raytracer.cc  raytracer.cu  scene_builder.cc  scene_builder.cu
src/gputils/: alloc.cu
src/procedural/: cube_world.cc  perlin.cu
src/rayenv/: camera.cu  canvas.cu  color.cu  scene.cc  scene.cu
src/rayopt/: bounding_box.cu  bvh.cc  bvh.cu  z_order.cu
src/rayprimitives/: entity.cu  hitable.cu  light.cu  material.cc  material.cu  phong.cu  texture.cu  trimesh.cc  trimesh.cu  vertex_buffer.cu
(+14 files in other folders)
